--- a/docs/features/collaboration-and-communication/data-health.mdx
+++ b/docs/features/collaboration-and-communication/data-health.mdx
@@ -31,7 +31,8 @@ The dashboard is based on the 6 pillars of data observability:
 </CardGroup>
 
 
-To give a high-level overview that doesn't require deep technical knowledge, the dashboard presents the data health in a simple way, using a color code to indicate the health of each pillar.
+To give a high-level overview that doesn't require deep technical knowledge or going into specific test results,
+the dashboard presents the data health in a simple way, by giving a health score, and using a color code to indicate if this score is healthy.
 Filters are available at the top of the page, making it easy to see the data health in different contexts.
 
 
@@ -43,3 +44,8 @@ The thresholds for the color coding (green, yellow and red) are also configurabl
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1720528475/dfxb2atgfkxthpwlrjkv.png" alt="Score weight and threshold configuration" />
 
+## Next steps
+
+- **Send a daily report** of the data health to your stakeholders
+- **Compare the data health** of different domains
+- **Set up alerts** for when the data health is below a certain threshold
