--- a/docs/_snippets/products-cards.mdx
+++ b/docs/_snippets/products-cards.mdx
@@ -11,7 +11,7 @@ Read about the key features and product offerings:
     title="Elementary Cloud"
     icon="cloud"
     iconType="solid"
-    href="/overview/elementary-cloud"
+    href="/cloud/introduction"
   ></Card>
   <Card
     title="Elementary OSS"
