--- a/docs/changelog.mdx
+++ b/docs/changelog.mdx
@@ -53,9 +53,11 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
         ></video>
 
 
+       </div>
+  </div>
 </div>
 
-### New Integrations! 
+### New Alert Integrations!
 
 <div style={{ display: "table", width: "auto" }}>
     <div style={{ display: "table-row", width: "auto" }}>
@@ -84,10 +86,12 @@ Our new [Incident Management Page](https://docs.elementary-data.com/features/ale
             }}
         >
        Introducing three new integrations with communication and incident management tools:
-       
-- [Microsoft Teams](https://docs.elementary-data.com/cloud/integrations/alerts/ms-teams)
-- [PagerDuty](https://docs.elementary-data.com/cloud/integrations/alerts/pagerduty)
-- [Opsgenie](https://docs.elementary-data.com/cloud/integrations/alerts/opsgenie)
+          - [Microsoft Teams](https://docs.elementary-data.com/cloud/integrations/alerts/ms-teams)
+          - [PagerDuty](https://docs.elementary-data.com/cloud/integrations/alerts/pagerduty)
+          - [Opsgenie](https://docs.elementary-data.com/cloud/integrations/alerts/opsgenie)
+       </div>
+  </div>
+</div>
 
 ## May 2024
 
