data health - fixes

--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -65,7 +65,7 @@ Elementary fosters collaboration by allowing you to easily share and communicate
 the overall health of the data platform and progress made to improve it with the broader organization.
 
 <CardGroup cols={2}>
-  <Card title="Data Health Dashboard" href="/features/collaboration-and-communication/data-observability-dashboard">
+  <Card title="Overview Dashboard" href="/features/collaboration-and-communication/data-observability-dashboard">
     Up to date dashboard with current status and trends of data issues. 
     Share the dashboard with others, enable them to slice results and stay informed.
   </Card>
