--- a/docs/features/collaboration-and-communication/data-health.mdx
+++ b/docs/features/collaboration-and-communication/data-health.mdx
@@ -36,7 +36,7 @@ the dashboard presents the data health in a simple way, by giving a health score
 Filters are available at the top of the page, making it easy to see the data health in different contexts.
 
 
-<img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1720528038/c6qvebsssbaivnimibbm.png" alt="Data Health Dashboard" />
+<img src="https://docs.elementary-data.com/features/collaboration-and-communication/data-health" alt="Data Health Dashboard" />
 
 
 The total score is a weighted average of the 6 pillars, where the weight is configurable.
