data tests section

--- a/docs/_snippets/cloud/features.mdx
+++ b/docs/_snippets/cloud/features.mdx
@@ -11,7 +11,7 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
     ML-powered monitors automatically detect data quality issues.
     Out-of-the-box for volume and freshness, and opt-in for data quality metrics.
   </Card>
-  <Card title="Data Tests" href="/features/anomaly-detection/data-tests-overview">
+  <Card title="Data Tests" href="/features/data-tests/data-tests-overview">
     Validate data and track the results of dbt tests, dbt packages tests (dbt-utils, dbt-expectations, elementary) and custom SQL tests.  
   </Card>
   <Card title="Schema Validation" href="/features/data-tests/schema-validation-test">
@@ -21,7 +21,7 @@ anomaly detection for unexpected behavior, and a single interface to manage it a
     Track failures and runs of jobs, models, and tests overtime.
     Pipeline failures and performance issues can cause data incidents, and create unneceserry costs.
   </Card>
-  <Card title="Code & UI Configuration">
+  <Card title="Code & UI Configuration" href="/features/data-tests/data-tests-overview#test-configuration">
     Configure Elementary in code, or via the UI for non-technical users or for adding tests in bulk.
     The platform opens PRs to your repo, saving hours of tedious YAML edits.
   </Card>
