--- a/docs/features/data-tests/custom-sql-tests.mdx
+++ b/docs/features/data-tests/custom-sql-tests.mdx
@@ -59,7 +59,7 @@ Elementary has an interface for adding custom SQL test that converts it to a pul
 The results of all custom SQL tests can be found under a `tests` folder in the test results sidebar. 
 Additionaly, if you configured a `tested table`, `tag` or `owner`, the test result will be visible under the relevant path. 
 
-### Alerts
+### Alerts on custom SQL tests
 
 It's recommended to use tags and owners create an [alert rule](/features/alerts-and-incidents/alert-rules) that will route these tests to the relevant recipient.  
 
