--- a/docs/features/anomaly-detection/automated-monitors.mdx
+++ b/docs/features/anomaly-detection/automated-monitors.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "Introduction"
 <Snippet file="cloud/features/anomaly-detection/automated-monitors-intro.mdx" />
 
 Once your environment is set up, we automatically collect metadata from your warehouse, which our ML models run on.
-The models are operational when the initial backfill is completed, there is no "loading / trainig period" - Elementary will collect enough historical data after setup to train the models.
+The models are operational when the initial backfill is completed, there is no "loading / training period" - Elementary will collect enough historical data after setup to train the models.
 
 Monitors are created for all models and sources in your dbt project, and their results are displayed in the application in the same way as package tests.
 
