--- a/docs/features/data-tests/custom-sql-tests.mdx
+++ b/docs/features/data-tests/custom-sql-tests.mdx
@@ -8,7 +8,7 @@ These tests can be executed against any of the tables in your connected data war
 
 ### When to use custom SQL tests?
 
-A custom SQL test is easier to write than a new generic dbt test, but it can't be leveraged across differnt data sets.
+A custom SQL test is easier to write than a new generic dbt test, but it can't be leveraged across different data sets.
 On the other hand, writing custom SQL tests enables testing complex custom calculation logic, relationships between many tables and more.
 
 This is why most Elementary users write custom SQL tests when the behavior to be tested is complex, specific and doesn’t exist in any out of the box test.
@@ -57,7 +57,7 @@ Elementary has an interface for adding custom SQL test that converts it to a pul
 ### Custom SQL test results
 
 The results of all custom SQL tests can be found under a `tests` folder in the test results sidebar. 
-Additionaly, if you configured a `tested table`, `tag` or `owner`, the test result will be visible under the relevant path. 
+Additionally, if you configured a `tested table`, `tag` or `owner`, the test result will be visible under the relevant path. 
 
 ### Alerts on custom SQL tests
 
