--- a/docs/features/data-tests/data-tests-overview.mdx
+++ b/docs/features/data-tests/data-tests-overview.mdx
@@ -18,8 +18,8 @@ The combination of dbt tests, Elementary monitors, custom SQL tests and the rich
 
 ### Test configuration
 
-One of the desing principals in Elementary is that users should manage configuration in their code.
-This enables to maintain the same workflow for building the pipline and configuring coverage, it makes observability and governance part of the development cycle, 
+One of the design principals in Elementary is that users should manage configuration in their code.
+This enables to maintain the same workflow for building the pipeline and configuring coverage, it makes observability and governance part of the development cycle, 
 and provides control in review process and version management.
 
 However, adding many tests in code is tedious, and configuration in code isn't usable for everyone. 
