--- a/docs/_snippets/cloud/features/data-tests/benefits-dbt-tests.mdx
+++ b/docs/_snippets/cloud/features/data-tests/benefits-dbt-tests.mdx
@@ -5,6 +5,6 @@ There are several benefits to this approach:
 
 - **Single interface for all observability** - Prevent the distribution of monitoring between different tools. All configuration is in code, all the results are in one interface.
 - **Avoid duplicate work and vendor lock in** - The tests you implemented already are effective in Elementary, as well as additional configuration. The future tests you add will remain in your code if you decide to offboard.
-- **Control of schedule and cost** - You have control of configuration and schedualing, tests can be executed when data is actually loaded and validation is needed.
-- **Prevent bad data from propogating** - As tests are in pipeline, you can leverage `dbt build` and fail the pipeline on critical test failures.
+- **Control of schedule and cost** - You have control of configuration and scheduling, tests can be executed when data is actually loaded and validation is needed.
+- **Prevent bad data from propagating** - As tests are in pipeline, you can leverage `dbt build` and fail the pipeline on critical test failures.
 - **Rich ecosystem** - The community of dbt users developes and supports various testing use cases.
