--- a/docs/features/anomaly-detection/automated-volume.mdx
+++ b/docs/features/anomaly-detection/automated-volume.mdx
@@ -3,4 +3,43 @@ title: Automated Volume Monitor
 sidebarTitle: "Automated volume"
 ---
 
-_🚧 Under construction 🚧_
+The volume monitor tracks the **total row count** of a table over time, rather than individual table updates. 
+This means that Elementary will not consider a single update as anomalous, but rather a continuous anomalous trend occurring over a period of time.
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1721128520/volume_ylochz.png"
+      alt="Automated volume result"
+    />
+  </div>
+</Frame>
+
+### Understand the monitor result
+
+The test data set is divided into two periods -
+
+1. Training Period - The historical behavior of the table's volume, patterns, and so forth. By default it will include 21 days.
+2. Detection Period - This is the period within which we look for anomalies. By default it’s set to the last 48 hours.
+
+Data points and expected range - 
+- Data points within the training period are dark grey, and data points within the detection period are colored.
+- The light grey area around the data points represents the model expected range. Data points outside this range are considered anomalous.
+- Hovering over a data point will detail the row count timestamp, row count and expected range. 
+
+Use the `Anomaly settings` and `result feedback` buttons to impact the monitor.
+
+### Anonmaly settings
+
+<Snippet file="cloud/features/anomaly-detection/volume-configuration.mdx" />
+<Snippet file="cloud/features/anomaly-detection/all-anomalies-configuration.mdx" />
+
+<iframe
+width="700"
+height="400"
+src="https://res.cloudinary.com/diuctyblm/video/upload/v1721130444/anomaly_settings_dlm5sn.mp4"
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen
+alt="Anomaly settings simulator"
+></iframe>
