--- a/docs/features/anomaly-detection/monitors-configuration.mdx
+++ b/docs/features/anomaly-detection/monitors-configuration.mdx
@@ -8,7 +8,7 @@ You can change the default settings and finetune the monitors to your needs usin
 In general, users will rely on the automated machine learning model anomaly settings.
 However, in some cases, an anomaly in the data is not relevant to your business. For this cases, the custom settings are useful.
 
-### Settings simulator
+## Settings simulator
 
 For some supported settings, Elementary offers a simulation of the change impact on latest results. 
 You can use the `Simulate Configuration` button after the change and before saving.
@@ -23,7 +23,7 @@ allowfullscreen
 alt="Anomaly settings simulator"
 ></iframe>
 
-### Supported settings
+## Supported settings
 
 #### All monitors
 
@@ -38,7 +38,7 @@ alt="Anomaly settings simulator"
 <Snippet file="cloud/features/anomaly-detection/freshness-configuration.mdx" />
 
 
-### Disable monitor
+## Disable monitor
 
 To disable a monitor from running, press the `...` button on the top right of the test result and then `Delete test`. 
 This will disable the monitor. To re-activate deleted monitors, reach out to support.
