--- a/docs/features/collaboration-and-communication/data-health.mdx
+++ b/docs/features/collaboration-and-communication/data-health.mdx
@@ -54,7 +54,7 @@ The thresholds for the color coding (green, yellow and red) are also configurabl
 ### Can I customize the quality dimension mapping of my tests?
 Of course!
 Each test you run, whether it's a generic or a custom test, can be mapped to one of the 6 quality dimensions.
-The way to do so is to add the `quality_dimension` tag to the test definition in your dbt project:
+The way to do so is to add `quality_dimension` to the test definition in your dbt project:
 
 <CodeGroup>
 
