--- a/docs/oss/guides/alerts/send-slack-alerts.mdx
+++ b/docs/oss/guides/alerts/send-slack-alerts.mdx
@@ -34,13 +34,7 @@ be sent to the wrong one due to the overlap accessing the backend table of eleme
 
 ## Alert on source freshness failures
 
-_Not supported in dbt cloud_
-
-To alert on source freshness, you will need to run `edr run-operation upload-source-freshness` right after each execution of `dbt source freshness`.
-This operation will upload the results to a table, and the execution of `edr monitor` will send the actual alert.
-
-- Note that `dbt source freshness` and `upload-source-freshness` needs to run from the same machine.
-- Note that `upload-source-freshness` requires passing `--project-dir` argument.
+To alert on source freshness, follow [this guide](/oss/guides/collect-dbt-source-freshness).
 
 ## Continuous alerting
 
