updated source freshness

--- a/docs/_snippets/guides/dbt-source-freshness.mdx
+++ b/docs/_snippets/guides/dbt-source-freshness.mdx
@@ -11,13 +11,10 @@ This flag enables Elementary to automatically collect `source-freshness` results
 
 <Note>For dbt version under 1.8</Note>
 
-Unlike dbt and Elementary tests, the results of the command `dbt source-freshness` are not automatically collected.
+In dbt versions lower than 1.8, the results of the command `dbt source-freshness` are not automatically collected.
 You can collect the results using the Elementary CLI tool. 
 
-If dbt source freshness results are collected, they will be presented in the UI, and in alerts upon failure. 
-
-
-## Collect source freshness failures
+If dbt source freshness results are collected, they will be presented in the UI, and in alerts upon failure.
 
 #### dbt core users
 
