--- a/docs/_snippets/cloud/integrations/redshift.mdx
+++ b/docs/_snippets/cloud/integrations/redshift.mdx
@@ -14,3 +14,8 @@ Provide the following fields:
 - **Password**: The password associated with the provided user.
 
 <Snippet file="cloud/integrations/ip-allowlist.mdx" />
+
+
+### Connect via SSH tunnel
+
+Elementary supports connecting via SSH or reverse SSH tunnel. Reach out to our team for details and support in this deployment.
