--- a/docs/_snippets/quickstart-package-install.mdx
+++ b/docs/_snippets/quickstart-package-install.mdx
@@ -97,9 +97,10 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
         ## To disable elementary for dev, uncomment this:
         # enabled: "{{ target.name in ['prod','analytics'] }}"
     
-    # Required from dbt 1.8 and above for certain Elementary features (please see more details above)
+    # Required from dbt 1.8 and above for certain Elementary features
     flags:
-      require_explicit_package_overrides_for_builtin_materializations: false
+      require_explicit_package_overrides_for_builtin_materializations: False
+      source_freshness_run_project_hooks: True
     ```
   </Step>
   <Step title="Import the package and build Elementary models">
