--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -35,8 +35,10 @@ An open-source CLI tool you can deploy and orchestrate to send Slack alerts and 
 | Slack and MS Teams alerts                                             |          ✅          |         ✅         |
 | Alert distribution rules, multiple <br/> destinations, custom formats |          ❌          |         ✅         |
 | Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |          ❌          |         ✅         |
-| Alert actions                                                    |          ❌          |         ✅         |
+| Alert actions                                                         |          ❌          |         ✅         |
 | Data catalog                                                          |          ❌          |         ✅         |
+| Data Health Score                                                     |          ❌          |         ✅         |
+| Incident management                                                   |          ❌          |         ✅         |
 | **Deployment, security and service**                                  |                     |                   |
 | Deployment                                                            |  Self hosted, CLI   |   Cloud service   |
 | Multiple environments and data warehouses                             |          ❌          |         ✅         |
@@ -45,7 +47,7 @@ An open-source CLI tool you can deploy and orchestrate to send Slack alerts and 
 | Social login with Google                                              |          ❌          |         ✅         |
 | SSO using OKTA / OneLogin / AD                                        |          ❌          |         ✅         |
 | Custom deployment options                                             |          ❌          |         ✅         |
-| Role based access control                                        |          ❌          |         ✅         |
+| Role based access control                                             |          ❌          |         ✅         |
 | Support SLA                                                           |  Community support  |   24 hours SLA    |
 
 
