--- a/docs/cloud/manage-team.mdx
+++ b/docs/cloud/manage-team.mdx
@@ -9,6 +9,12 @@ icon: "square-4"
 You can invite team members to join you! 🎉
 
 Click on your initials on the top right of the screen and select `Team` to invite users.
+When you invite a user, you can assign them a role. The roles are:
+1. "Admin" - Has full access to all assets including team management
+2. "Can Edit" - can manage environments and configurations, but cannot manage team members
+3. "Can View" - can view data assets, test results, incidents and lineage
+
+You can also add custom roles with specific permissions to suit your needs. Talk to our support team to set this up.
 
 Users you invite will receive an Email saying you invited them, and will need to accept and activate their account.
 
