fixup! Add power bi docs

--- a/docs/cloud/integrations/bi/power-bi.mdx
+++ b/docs/cloud/integrations/bi/power-bi.mdx
@@ -23,7 +23,7 @@ Enable the following features, and apply at least for the Service principal's se
 
 Those features will allow Elementary to get all required info for computing the data lineage graph.
 
-### Connecting Looker to Elementary
+### Connecting Power BI to Elementary
 
 Navigate to the **Account settings > Environments** and choose the environment to which you would like to connect Elementary.
 Choose the Power BI connection and provide the following details to validate and complete the integration.
