Fixed a typo in Bitbucket doc.

--- a/docs/cloud/integrations/code-repo/bitbucket.mdx
+++ b/docs/cloud/integrations/code-repo/bitbucket.mdx
@@ -13,7 +13,7 @@ In the menu that opens up later on, select the repository where your dbt project
 
 <Warning>Requires a user with permissions to install new applications in the repository</Warning>
 
-### Alternative: Create a Gitlab project token
+### Alternative: Create a Bitbucket project token
 
 If connecting the Elementary Bitbucket App isn't an option, you can connect using a token managed by your team instead.
 
